...
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/listNameTextCreate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp" />

    <Button
...
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/image_from_gallery_button"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/saveButtonCreate"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/save_Button"
...
