<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    tools:context=".fragments.ListFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#f5f5dc"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/arrow_icon" />

        <EditText
            android:id="@+id/listNameText"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/save_Button"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRecyclerView"
        android:layout_width="409dp"
        android:layout_height="563dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/deleteButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/delete_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:backgroundTint="@color/buttonColor"
            android:src="@drawable/add_icon" />

    </LinearLayout>

</LinearLayout>